Projeto/Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON bloco DOT
Rule 2     bloco -> decls compound_stmt
Rule 3     decls -> decl decls
Rule 4     decls -> <empty>
Rule 5     decl -> var_section
Rule 6     decl -> subprog_decl
Rule 7     var_section -> VAR var_decl_list
Rule 8     var_decl_list -> var_decl var_decl_list_tail
Rule 9     var_decl_list_tail -> var_decl var_decl_list_tail
Rule 10    var_decl_list_tail -> <empty>
Rule 11    var_decl -> id_list COLON tipo SEMICOLON
Rule 12    id_list -> ID id_list_tail
Rule 13    id_list_tail -> COMMA ID id_list_tail
Rule 14    id_list_tail -> <empty>
Rule 15    tipo -> INTEGER
Rule 16    tipo -> REAL
Rule 17    tipo -> BOOLEAN
Rule 18    tipo -> CHAR
Rule 19    tipo -> STRING
Rule 20    tipo -> array_type
Rule 21    array_type -> ARRAY LBRACKET range RBRACKET OF tipo
Rule 22    range -> NUMBER_INT RANGE NUMBER_INT
Rule 23    subprog_decl -> function_decl
Rule 24    subprog_decl -> procedure_decl
Rule 25    function_header -> FUNCTION ID LPAREN param_list_opt RPAREN COLON tipo SEMICOLON
Rule 26    func_enter -> <empty>
Rule 27    function_decl -> function_header func_enter bloco SEMICOLON
Rule 28    procedure_header -> PROCEDURE ID LPAREN param_list_opt RPAREN SEMICOLON
Rule 29    proc_enter -> <empty>
Rule 30    procedure_decl -> procedure_header proc_enter bloco SEMICOLON
Rule 31    param_list_opt -> param_list
Rule 32    param_list_opt -> <empty>
Rule 33    param_list -> param param_list_tail
Rule 34    param_list_tail -> SEMICOLON param param_list_tail
Rule 35    param_list_tail -> <empty>
Rule 36    param -> id_list COLON tipo
Rule 37    compound_stmt -> BEGIN stmt_list_opt END
Rule 38    stmt_list_opt -> stmt_list
Rule 39    stmt_list_opt -> <empty>
Rule 40    stmt_list -> stmt stmt_list_tail
Rule 41    stmt_list_tail -> SEMICOLON stmt stmt_list_tail
Rule 42    stmt_list_tail -> SEMICOLON
Rule 43    stmt_list_tail -> <empty>
Rule 44    stmt -> assign_stmt
Rule 45    stmt -> if_stmt
Rule 46    stmt -> while_stmt
Rule 47    stmt -> for_stmt
Rule 48    stmt -> repeat_stmt
Rule 49    stmt -> compound_stmt
Rule 50    stmt -> proc_call
Rule 51    assign_stmt -> lvalue ASSIGN expr
Rule 52    var_ref -> ID
Rule 53    var_ref -> ID LBRACKET expr RBRACKET
Rule 54    lvalue -> ID
Rule 55    lvalue -> ID LBRACKET expr RBRACKET
Rule 56    if_stmt -> IF expr THEN stmt
Rule 57    if_stmt -> IF expr THEN stmt ELSE stmt
Rule 58    while_stmt -> WHILE expr DO stmt
Rule 59    for_dir -> TO
Rule 60    for_dir -> DOWNTO
Rule 61    for_stmt -> FOR ID ASSIGN expr for_dir expr DO for_enter stmt for_exit
Rule 62    for_enter -> <empty>
Rule 63    for_exit -> <empty>
Rule 64    repeat_stmt -> REPEAT stmt_list_opt UNTIL expr
Rule 65    proc_call -> ID
Rule 66    proc_call -> ID LPAREN arg_list_opt RPAREN
Rule 67    proc_call -> WRITELN args_opt
Rule 68    proc_call -> READLN read_args_opt
Rule 69    read_args_opt -> LPAREN read_var_list RPAREN
Rule 70    read_args_opt -> <empty>
Rule 71    read_var_list -> lvalue
Rule 72    read_var_list -> lvalue COMMA read_var_list
Rule 73    args_opt -> LPAREN arg_list_opt RPAREN
Rule 74    args_opt -> <empty>
Rule 75    arg_list_opt -> arg_list
Rule 76    arg_list_opt -> <empty>
Rule 77    arg_list -> expr arg_list_tail
Rule 78    arg_list_tail -> COMMA expr arg_list_tail
Rule 79    arg_list_tail -> <empty>
Rule 80    expr -> or_expr
Rule 81    or_expr -> and_expr
Rule 82    or_expr -> or_expr OR and_expr
Rule 83    and_expr -> rel_expr
Rule 84    and_expr -> and_expr AND rel_expr
Rule 85    rel_expr -> add_expr rel_opt
Rule 86    rel_opt -> relop add_expr
Rule 87    rel_opt -> <empty>
Rule 88    relop -> EQUAL
Rule 89    relop -> NOTEQUAL
Rule 90    relop -> LESS
Rule 91    relop -> LESSEQUAL
Rule 92    relop -> GREATER
Rule 93    relop -> GREATEREQUAL
Rule 94    add_expr -> mul_expr
Rule 95    add_expr -> add_expr PLUS mul_expr
Rule 96    add_expr -> add_expr MINUS mul_expr
Rule 97    mul_expr -> unary_expr
Rule 98    mul_expr -> mul_expr TIMES unary_expr
Rule 99    mul_expr -> mul_expr DIVIDE unary_expr
Rule 100   mul_expr -> mul_expr DIV unary_expr
Rule 101   mul_expr -> mul_expr MOD unary_expr
Rule 102   unary_expr -> MINUS unary_expr
Rule 103   unary_expr -> NOT unary_expr
Rule 104   unary_expr -> primary
Rule 105   primary -> NUMBER_REAL
Rule 106   primary -> NUMBER_INT
Rule 107   primary -> STRING_LITERAL
Rule 108   primary -> TRUE
Rule 109   primary -> FALSE
Rule 110   primary -> var_ref
Rule 111   primary -> ID LPAREN arg_list_opt RPAREN
Rule 112   primary -> LPAREN expr RPAREN

Terminals, with rules where they appear

AND                  : 84
ARRAY                : 21
ASSIGN               : 51 61
BEGIN                : 37
BOOLEAN              : 17
CHAR                 : 18
COLON                : 11 25 36
COMMA                : 13 72 78
DIV                  : 100
DIVIDE               : 99
DO                   : 58 61
DOT                  : 1
DOWNTO               : 60
ELSE                 : 57
END                  : 37
EQUAL                : 88
FALSE                : 109
FOR                  : 61
FUNCTION             : 25
GREATER              : 92
GREATEREQUAL         : 93
ID                   : 1 12 13 25 28 52 53 54 55 61 65 66 111
IF                   : 56 57
INTEGER              : 15
LBRACKET             : 21 53 55
LESS                 : 90
LESSEQUAL            : 91
LPAREN               : 25 28 66 69 73 111 112
MINUS                : 96 102
MOD                  : 101
NOT                  : 103
NOTEQUAL             : 89
NUMBER_INT           : 22 22 106
NUMBER_REAL          : 105
OF                   : 21
OR                   : 82
PLUS                 : 95
PROCEDURE            : 28
PROGRAM              : 1
RANGE                : 22
RBRACKET             : 21 53 55
READLN               : 68
REAL                 : 16
REPEAT               : 64
RPAREN               : 25 28 66 69 73 111 112
SEMICOLON            : 1 11 25 27 28 30 34 41 42
STRING               : 19
STRING_LITERAL       : 107
THEN                 : 56 57
TIMES                : 98
TO                   : 59
TRUE                 : 108
UNTIL                : 64
VAR                  : 7
WHILE                : 58
WRITELN              : 67
error                : 

Nonterminals, with rules where they appear

add_expr             : 85 86 95 96
and_expr             : 81 82 84
arg_list             : 75
arg_list_opt         : 66 73 111
arg_list_tail        : 77 78
args_opt             : 67
array_type           : 20
assign_stmt          : 44
bloco                : 1 27 30
compound_stmt        : 2 49
decl                 : 3
decls                : 2 3
expr                 : 51 53 55 56 57 58 61 61 64 77 78 112
for_dir              : 61
for_enter            : 61
for_exit             : 61
for_stmt             : 47
func_enter           : 27
function_decl        : 23
function_header      : 27
id_list              : 11 36
id_list_tail         : 12 13
if_stmt              : 45
lvalue               : 51 71 72
mul_expr             : 94 95 96 98 99 100 101
or_expr              : 80 82
param                : 33 34
param_list           : 31
param_list_opt       : 25 28
param_list_tail      : 33 34
primary              : 104
proc_call            : 50
proc_enter           : 30
procedure_decl       : 24
procedure_header     : 30
programa             : 0
range                : 21
read_args_opt        : 68
read_var_list        : 69 72
rel_expr             : 83 84
rel_opt              : 85
relop                : 86
repeat_stmt          : 48
stmt                 : 40 41 56 57 57 58 61
stmt_list            : 38
stmt_list_opt        : 37 64
stmt_list_tail       : 40 41
subprog_decl         : 6
tipo                 : 11 21 25 36
unary_expr           : 97 98 99 100 101 102 103
var_decl             : 8 9
var_decl_list        : 7
var_decl_list_tail   : 8 9
var_ref              : 110
var_section          : 5
while_stmt           : 46

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON bloco DOT

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON bloco DOT

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON bloco DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . bloco DOT
    (2) bloco -> . decls compound_stmt
    (3) decls -> . decl decls
    (4) decls -> .
    (5) decl -> . var_section
    (6) decl -> . subprog_decl
    (7) var_section -> . VAR var_decl_list
    (23) subprog_decl -> . function_decl
    (24) subprog_decl -> . procedure_decl
    (27) function_decl -> . function_header func_enter bloco SEMICOLON
    (30) procedure_decl -> . procedure_header proc_enter bloco SEMICOLON
    (25) function_header -> . FUNCTION ID LPAREN param_list_opt RPAREN COLON tipo SEMICOLON
    (28) procedure_header -> . PROCEDURE ID LPAREN param_list_opt RPAREN SEMICOLON

    BEGIN           reduce using rule 4 (decls -> .)
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    bloco                          shift and go to state 5
    decls                          shift and go to state 6
    decl                           shift and go to state 7
    var_section                    shift and go to state 8
    subprog_decl                   shift and go to state 9
    function_decl                  shift and go to state 11
    procedure_decl                 shift and go to state 12
    function_header                shift and go to state 13
    procedure_header               shift and go to state 14

state 5

    (1) programa -> PROGRAM ID SEMICOLON bloco . DOT

    DOT             shift and go to state 17


state 6

    (2) bloco -> decls . compound_stmt
    (37) compound_stmt -> . BEGIN stmt_list_opt END

    BEGIN           shift and go to state 19

    compound_stmt                  shift and go to state 18

state 7

    (3) decls -> decl . decls
    (3) decls -> . decl decls
    (4) decls -> .
    (5) decl -> . var_section
    (6) decl -> . subprog_decl
    (7) var_section -> . VAR var_decl_list
    (23) subprog_decl -> . function_decl
    (24) subprog_decl -> . procedure_decl
    (27) function_decl -> . function_header func_enter bloco SEMICOLON
    (30) procedure_decl -> . procedure_header proc_enter bloco SEMICOLON
    (25) function_header -> . FUNCTION ID LPAREN param_list_opt RPAREN COLON tipo SEMICOLON
    (28) procedure_header -> . PROCEDURE ID LPAREN param_list_opt RPAREN SEMICOLON

    BEGIN           reduce using rule 4 (decls -> .)
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    decl                           shift and go to state 7
    decls                          shift and go to state 20
    var_section                    shift and go to state 8
    subprog_decl                   shift and go to state 9
    function_decl                  shift and go to state 11
    procedure_decl                 shift and go to state 12
    function_header                shift and go to state 13
    procedure_header               shift and go to state 14

state 8

    (5) decl -> var_section .

    VAR             reduce using rule 5 (decl -> var_section .)
    FUNCTION        reduce using rule 5 (decl -> var_section .)
    PROCEDURE       reduce using rule 5 (decl -> var_section .)
    BEGIN           reduce using rule 5 (decl -> var_section .)


state 9

    (6) decl -> subprog_decl .

    VAR             reduce using rule 6 (decl -> subprog_decl .)
    FUNCTION        reduce using rule 6 (decl -> subprog_decl .)
    PROCEDURE       reduce using rule 6 (decl -> subprog_decl .)
    BEGIN           reduce using rule 6 (decl -> subprog_decl .)


state 10

    (7) var_section -> VAR . var_decl_list
    (8) var_decl_list -> . var_decl var_decl_list_tail
    (11) var_decl -> . id_list COLON tipo SEMICOLON
    (12) id_list -> . ID id_list_tail

    ID              shift and go to state 24

    var_decl_list                  shift and go to state 21
    var_decl                       shift and go to state 22
    id_list                        shift and go to state 23

state 11

    (23) subprog_decl -> function_decl .

    VAR             reduce using rule 23 (subprog_decl -> function_decl .)
    FUNCTION        reduce using rule 23 (subprog_decl -> function_decl .)
    PROCEDURE       reduce using rule 23 (subprog_decl -> function_decl .)
    BEGIN           reduce using rule 23 (subprog_decl -> function_decl .)


state 12

    (24) subprog_decl -> procedure_decl .

    VAR             reduce using rule 24 (subprog_decl -> procedure_decl .)
    FUNCTION        reduce using rule 24 (subprog_decl -> procedure_decl .)
    PROCEDURE       reduce using rule 24 (subprog_decl -> procedure_decl .)
    BEGIN           reduce using rule 24 (subprog_decl -> procedure_decl .)


state 13

    (27) function_decl -> function_header . func_enter bloco SEMICOLON
    (26) func_enter -> .

    VAR             reduce using rule 26 (func_enter -> .)
    FUNCTION        reduce using rule 26 (func_enter -> .)
    PROCEDURE       reduce using rule 26 (func_enter -> .)
    BEGIN           reduce using rule 26 (func_enter -> .)

    func_enter                     shift and go to state 25

state 14

    (30) procedure_decl -> procedure_header . proc_enter bloco SEMICOLON
    (29) proc_enter -> .

    VAR             reduce using rule 29 (proc_enter -> .)
    FUNCTION        reduce using rule 29 (proc_enter -> .)
    PROCEDURE       reduce using rule 29 (proc_enter -> .)
    BEGIN           reduce using rule 29 (proc_enter -> .)

    proc_enter                     shift and go to state 26

state 15

    (25) function_header -> FUNCTION . ID LPAREN param_list_opt RPAREN COLON tipo SEMICOLON

    ID              shift and go to state 27


state 16

    (28) procedure_header -> PROCEDURE . ID LPAREN param_list_opt RPAREN SEMICOLON

    ID              shift and go to state 28


state 17

    (1) programa -> PROGRAM ID SEMICOLON bloco DOT .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON bloco DOT .)


state 18

    (2) bloco -> decls compound_stmt .

    DOT             reduce using rule 2 (bloco -> decls compound_stmt .)
    SEMICOLON       reduce using rule 2 (bloco -> decls compound_stmt .)


state 19

    (37) compound_stmt -> BEGIN . stmt_list_opt END
    (38) stmt_list_opt -> . stmt_list
    (39) stmt_list_opt -> .
    (40) stmt_list -> . stmt stmt_list_tail
    (44) stmt -> . assign_stmt
    (45) stmt -> . if_stmt
    (46) stmt -> . while_stmt
    (47) stmt -> . for_stmt
    (48) stmt -> . repeat_stmt
    (49) stmt -> . compound_stmt
    (50) stmt -> . proc_call
    (51) assign_stmt -> . lvalue ASSIGN expr
    (56) if_stmt -> . IF expr THEN stmt
    (57) if_stmt -> . IF expr THEN stmt ELSE stmt
    (58) while_stmt -> . WHILE expr DO stmt
    (61) for_stmt -> . FOR ID ASSIGN expr for_dir expr DO for_enter stmt for_exit
    (64) repeat_stmt -> . REPEAT stmt_list_opt UNTIL expr
    (37) compound_stmt -> . BEGIN stmt_list_opt END
    (65) proc_call -> . ID
    (66) proc_call -> . ID LPAREN arg_list_opt RPAREN
    (67) proc_call -> . WRITELN args_opt
    (68) proc_call -> . READLN read_args_opt
    (54) lvalue -> . ID
    (55) lvalue -> . ID LBRACKET expr RBRACKET

    END             reduce using rule 39 (stmt_list_opt -> .)
    IF              shift and go to state 40
    WHILE           shift and go to state 41
    FOR             shift and go to state 42
    REPEAT          shift and go to state 44
    BEGIN           shift and go to state 19
    ID              shift and go to state 43
    WRITELN         shift and go to state 45
    READLN          shift and go to state 46

    stmt_list_opt                  shift and go to state 29
    stmt_list                      shift and go to state 30
    stmt                           shift and go to state 31
    assign_stmt                    shift and go to state 32
    if_stmt                        shift and go to state 33
    while_stmt                     shift and go to state 34
    for_stmt                       shift and go to state 35
    repeat_stmt                    shift and go to state 36
    compound_stmt                  shift and go to state 37
    proc_call                      shift and go to state 38
    lvalue                         shift and go to state 39

state 20

    (3) decls -> decl decls .

    BEGIN           reduce using rule 3 (decls -> decl decls .)


state 21

    (7) var_section -> VAR var_decl_list .

    VAR             reduce using rule 7 (var_section -> VAR var_decl_list .)
    FUNCTION        reduce using rule 7 (var_section -> VAR var_decl_list .)
    PROCEDURE       reduce using rule 7 (var_section -> VAR var_decl_list .)
    BEGIN           reduce using rule 7 (var_section -> VAR var_decl_list .)


state 22

    (8) var_decl_list -> var_decl . var_decl_list_tail
    (9) var_decl_list_tail -> . var_decl var_decl_list_tail
    (10) var_decl_list_tail -> .
    (11) var_decl -> . id_list COLON tipo SEMICOLON
    (12) id_list -> . ID id_list_tail

    VAR             reduce using rule 10 (var_decl_list_tail -> .)
    FUNCTION        reduce using rule 10 (var_decl_list_tail -> .)
    PROCEDURE       reduce using rule 10 (var_decl_list_tail -> .)
    BEGIN           reduce using rule 10 (var_decl_list_tail -> .)
    ID              shift and go to state 24

    var_decl                       shift and go to state 47
    var_decl_list_tail             shift and go to state 48
    id_list                        shift and go to state 23

state 23

    (11) var_decl -> id_list . COLON tipo SEMICOLON

    COLON           shift and go to state 49


state 24

    (12) id_list -> ID . id_list_tail
    (13) id_list_tail -> . COMMA ID id_list_tail
    (14) id_list_tail -> .

    COMMA           shift and go to state 51
    COLON           reduce using rule 14 (id_list_tail -> .)

    id_list_tail                   shift and go to state 50

state 25

    (27) function_decl -> function_header func_enter . bloco SEMICOLON
    (2) bloco -> . decls compound_stmt
    (3) decls -> . decl decls
    (4) decls -> .
    (5) decl -> . var_section
    (6) decl -> . subprog_decl
    (7) var_section -> . VAR var_decl_list
    (23) subprog_decl -> . function_decl
    (24) subprog_decl -> . procedure_decl
    (27) function_decl -> . function_header func_enter bloco SEMICOLON
    (30) procedure_decl -> . procedure_header proc_enter bloco SEMICOLON
    (25) function_header -> . FUNCTION ID LPAREN param_list_opt RPAREN COLON tipo SEMICOLON
    (28) procedure_header -> . PROCEDURE ID LPAREN param_list_opt RPAREN SEMICOLON

    BEGIN           reduce using rule 4 (decls -> .)
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    function_header                shift and go to state 13
    bloco                          shift and go to state 52
    decls                          shift and go to state 6
    decl                           shift and go to state 7
    var_section                    shift and go to state 8
    subprog_decl                   shift and go to state 9
    function_decl                  shift and go to state 11
    procedure_decl                 shift and go to state 12
    procedure_header               shift and go to state 14

state 26

    (30) procedure_decl -> procedure_header proc_enter . bloco SEMICOLON
    (2) bloco -> . decls compound_stmt
    (3) decls -> . decl decls
    (4) decls -> .
    (5) decl -> . var_section
    (6) decl -> . subprog_decl
    (7) var_section -> . VAR var_decl_list
    (23) subprog_decl -> . function_decl
    (24) subprog_decl -> . procedure_decl
    (27) function_decl -> . function_header func_enter bloco SEMICOLON
    (30) procedure_decl -> . procedure_header proc_enter bloco SEMICOLON
    (25) function_header -> . FUNCTION ID LPAREN param_list_opt RPAREN COLON tipo SEMICOLON
    (28) procedure_header -> . PROCEDURE ID LPAREN param_list_opt RPAREN SEMICOLON

    BEGIN           reduce using rule 4 (decls -> .)
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    procedure_header               shift and go to state 14
    bloco                          shift and go to state 53
    decls                          shift and go to state 6
    decl                           shift and go to state 7
    var_section                    shift and go to state 8
    subprog_decl                   shift and go to state 9
    function_decl                  shift and go to state 11
    procedure_decl                 shift and go to state 12
    function_header                shift and go to state 13

state 27

    (25) function_header -> FUNCTION ID . LPAREN param_list_opt RPAREN COLON tipo SEMICOLON

    LPAREN          shift and go to state 54


state 28

    (28) procedure_header -> PROCEDURE ID . LPAREN param_list_opt RPAREN SEMICOLON

    LPAREN          shift and go to state 55


state 29

    (37) compound_stmt -> BEGIN stmt_list_opt . END

    END             shift and go to state 56


state 30

    (38) stmt_list_opt -> stmt_list .

    END             reduce using rule 38 (stmt_list_opt -> stmt_list .)
    UNTIL           reduce using rule 38 (stmt_list_opt -> stmt_list .)


state 31

    (40) stmt_list -> stmt . stmt_list_tail
    (41) stmt_list_tail -> . SEMICOLON stmt stmt_list_tail
    (42) stmt_list_tail -> . SEMICOLON
    (43) stmt_list_tail -> .

    SEMICOLON       shift and go to state 58
    END             reduce using rule 43 (stmt_list_tail -> .)
    UNTIL           reduce using rule 43 (stmt_list_tail -> .)

    stmt_list_tail                 shift and go to state 57

state 32

    (44) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 44 (stmt -> assign_stmt .)
    END             reduce using rule 44 (stmt -> assign_stmt .)
    UNTIL           reduce using rule 44 (stmt -> assign_stmt .)
    ELSE            reduce using rule 44 (stmt -> assign_stmt .)


state 33

    (45) stmt -> if_stmt .

    SEMICOLON       reduce using rule 45 (stmt -> if_stmt .)
    END             reduce using rule 45 (stmt -> if_stmt .)
    UNTIL           reduce using rule 45 (stmt -> if_stmt .)
    ELSE            reduce using rule 45 (stmt -> if_stmt .)


state 34

    (46) stmt -> while_stmt .

    SEMICOLON       reduce using rule 46 (stmt -> while_stmt .)
    END             reduce using rule 46 (stmt -> while_stmt .)
    UNTIL           reduce using rule 46 (stmt -> while_stmt .)
    ELSE            reduce using rule 46 (stmt -> while_stmt .)


state 35

    (47) stmt -> for_stmt .

    SEMICOLON       reduce using rule 47 (stmt -> for_stmt .)
    END             reduce using rule 47 (stmt -> for_stmt .)
    UNTIL           reduce using rule 47 (stmt -> for_stmt .)
    ELSE            reduce using rule 47 (stmt -> for_stmt .)


state 36

    (48) stmt -> repeat_stmt .

    SEMICOLON       reduce using rule 48 (stmt -> repeat_stmt .)
    END             reduce using rule 48 (stmt -> repeat_stmt .)
    UNTIL           reduce using rule 48 (stmt -> repeat_stmt .)
    ELSE            reduce using rule 48 (stmt -> repeat_stmt .)


state 37

    (49) stmt -> compound_stmt .

    SEMICOLON       reduce using rule 49 (stmt -> compound_stmt .)
    END             reduce using rule 49 (stmt -> compound_stmt .)
    UNTIL           reduce using rule 49 (stmt -> compound_stmt .)
    ELSE            reduce using rule 49 (stmt -> compound_stmt .)


state 38

    (50) stmt -> proc_call .

    SEMICOLON       reduce using rule 50 (stmt -> proc_call .)
    END             reduce using rule 50 (stmt -> proc_call .)
    UNTIL           reduce using rule 50 (stmt -> proc_call .)
    ELSE            reduce using rule 50 (stmt -> proc_call .)


state 39

    (51) assign_stmt -> lvalue . ASSIGN expr

    ASSIGN          shift and go to state 59


state 40

    (56) if_stmt -> IF . expr THEN stmt
    (57) if_stmt -> IF . expr THEN stmt ELSE stmt
    (80) expr -> . or_expr
    (81) or_expr -> . and_expr
    (82) or_expr -> . or_expr OR and_expr
    (83) and_expr -> . rel_expr
    (84) and_expr -> . and_expr AND rel_expr
    (85) rel_expr -> . add_expr rel_opt
    (94) add_expr -> . mul_expr
    (95) add_expr -> . add_expr PLUS mul_expr
    (96) add_expr -> . add_expr MINUS mul_expr
    (97) mul_expr -> . unary_expr
    (98) mul_expr -> . mul_expr TIMES unary_expr
    (99) mul_expr -> . mul_expr DIVIDE unary_expr
    (100) mul_expr -> . mul_expr DIV unary_expr
    (101) mul_expr -> . mul_expr MOD unary_expr
    (102) unary_expr -> . MINUS unary_expr
    (103) unary_expr -> . NOT unary_expr
    (104) unary_expr -> . primary
    (105) primary -> . NUMBER_REAL
    (106) primary -> . NUMBER_INT
    (107) primary -> . STRING_LITERAL
    (108) primary -> . TRUE
    (109) primary -> . FALSE
    (110) primary -> . var_ref
    (111) primary -> . ID LPAREN arg_list_opt RPAREN
    (112) primary -> . LPAREN expr RPAREN
    (52) var_ref -> . ID
    (53) var_ref -> . ID LBRACKET expr RBRACKET

    MINUS           shift and go to state 66
    NOT             shift and go to state 68
    NUMBER_REAL     shift and go to state 70
    NUMBER_INT      shift and go to state 71
    STRING_LITERAL  shift and go to state 72
    TRUE            shift and go to state 73
    FALSE           shift and go to state 74
    ID              shift and go to state 76
    LPAREN          shift and go to state 77

    expr                           shift and go to state 60
    or_expr                        shift and go to state 61
    and_expr                       shift and go to state 62
    rel_expr                       shift and go to state 63
    add_expr                       shift and go to state 64
    mul_expr                       shift and go to state 65
    unary_expr                     shift and go to state 67
    primary                        shift and go to state 69
    var_ref                        shift and go to state 75

state 41

    (58) while_stmt -> WHILE . expr DO stmt
    (80) expr -> . or_expr
    (81) or_expr -> . and_expr
    (82) or_expr -> . or_expr OR and_expr
    (83) and_expr -> . rel_expr
    (84) and_expr -> . and_expr AND rel_expr
    (85) rel_expr -> . add_expr rel_opt
    (94) add_expr -> . mul_expr
    (95) add_expr -> . add_expr PLUS mul_expr
    (96) add_expr -> . add_expr MINUS mul_expr
    (97) mul_expr -> . unary_expr
    (98) mul_expr -> . mul_expr TIMES unary_expr
    (99) mul_expr -> . mul_expr DIVIDE unary_expr
    (100) mul_expr -> . mul_expr DIV unary_expr
    (101) mul_expr -> . mul_expr MOD unary_expr
    (102) unary_expr -> . MINUS unary_expr
    (103) unary_expr -> . NOT unary_expr
    (104) unary_expr -> . primary
    (105) primary -> . NUMBER_REAL
    (106) primary -> . NUMBER_INT
    (107) primary -> . STRING_LITERAL
    (108) primary -> . TRUE
    (109) primary -> . FALSE
    (110) primary -> . var_ref
    (111) primary -> . ID LPAREN arg_list_opt RPAREN
    (112) primary -> . LPAREN expr RPAREN
    (52) var_ref -> . ID
    (53) var_ref -> . ID LBRACKET expr RBRACKET

    MINUS           shift and go to state 66
    NOT             shift and go to state 68
    NUMBER_REAL     shift and go to state 70
    NUMBER_INT      shift and go to state 71
    STRING_LITERAL  shift and go to state 72
    TRUE            shift and go to state 73
    FALSE           shift and go to state 74
    ID              shift and go to state 76
    LPAREN          shift and go to state 77

    expr                           shift and go to state 78
    or_expr                        shift and go to state 61
    and_expr                       shift and go to state 62
    rel_expr                       shift and go to state 63
    add_expr                       shift and go to state 64
    mul_expr                       shift and go to state 65
    unary_expr                     shift and go to state 67
    primary                        shift and go to state 69
    var_ref                        shift and go to state 75

state 42

    (61) for_stmt -> FOR . ID ASSIGN expr for_dir expr DO for_enter stmt for_exit

    ID              shift and go to state 79


state 43

    (65) proc_call -> ID .
    (66) proc_call -> ID . LPAREN arg_list_opt RPAREN
    (54) lvalue -> ID .
    (55) lvalue -> ID . LBRACKET expr RBRACKET

    SEMICOLON       reduce using rule 65 (proc_call -> ID .)
    END             reduce using rule 65 (proc_call -> ID .)
    UNTIL           reduce using rule 65 (proc_call -> ID .)
    ELSE            reduce using rule 65 (proc_call -> ID .)
    LPAREN          shift and go to state 80
    ASSIGN          reduce using rule 54 (lvalue -> ID .)
    LBRACKET        shift and go to state 81


state 44

    (64) repeat_stmt -> REPEAT . stmt_list_opt UNTIL expr
    (38) stmt_list_opt -> . stmt_list
    (39) stmt_list_opt -> .
    (40) stmt_list -> . stmt stmt_list_tail
    (44) stmt -> . assign_stmt
    (45) stmt -> . if_stmt
    (46) stmt -> . while_stmt
    (47) stmt -> . for_stmt
    (48) stmt -> . repeat_stmt
    (49) stmt -> . compound_stmt
    (50) stmt -> . proc_call
    (51) assign_stmt -> . lvalue ASSIGN expr
    (56) if_stmt -> . IF expr THEN stmt
    (57) if_stmt -> . IF expr THEN stmt ELSE stmt
    (58) while_stmt -> . WHILE expr DO stmt
    (61) for_stmt -> . FOR ID ASSIGN expr for_dir expr DO for_enter stmt for_exit
    (64) repeat_stmt -> . REPEAT stmt_list_opt UNTIL expr
    (37) compound_stmt -> . BEGIN stmt_list_opt END
    (65) proc_call -> . ID
    (66) proc_call -> . ID LPAREN arg_list_opt RPAREN
    (67) proc_call -> . WRITELN args_opt
    (68) proc_call -> . READLN read_args_opt
    (54) lvalue -> . ID
    (55) lvalue -> . ID LBRACKET expr RBRACKET

    UNTIL           reduce using rule 39 (stmt_list_opt -> .)
    IF              shift and go to state 40
    WHILE           shift and go to state 41
    FOR             shift and go to state 42
    REPEAT          shift and go to state 44
    BEGIN           shift and go to state 19
    ID              shift and go to state 43
    WRITELN         shift and go to state 45
    READLN          shift and go to state 46

    stmt_list_opt                  shift and go to state 82
    stmt_list                      shift and go to state 30
    stmt                           shift and go to state 31
    assign_stmt                    shift and go to state 32
    if_stmt                        shift and go to state 33
    while_stmt                     shift and go to state 34
    for_stmt                       shift and go to state 35
    repeat_stmt                    shift and go to state 36
    compound_stmt                  shift and go to state 37
    proc_call                      shift and go to state 38
    lvalue                         shift and go to state 39

state 45

    (67) proc_call -> WRITELN . args_opt
    (73) args_opt -> . LPAREN arg_list_opt RPAREN
    (74) args_opt -> .

    LPAREN          shift and go to state 84
    SEMICOLON       reduce using rule 74 (args_opt -> .)
    END             reduce using rule 74 (args_opt -> .)
    UNTIL           reduce using rule 74 (args_opt -> .)
    ELSE            reduce using rule 74 (args_opt -> .)

    args_opt                       shift and go to state 83

state 46

    (68) proc_call -> READLN . read_args_opt
    (69) read_args_opt -> . LPAREN read_var_list RPAREN
    (70) read_args_opt -> .

    LPAREN          shift and go to state 86
    SEMICOLON       reduce using rule 70 (read_args_opt -> .)
    END             reduce using rule 70 (read_args_opt -> .)
    UNTIL           reduce using rule 70 (read_args_opt -> .)
    ELSE            reduce using rule 70 (read_args_opt -> .)

    read_args_opt                  shift and go to state 85

state 47

    (9) var_decl_list_tail -> var_decl . var_decl_list_tail
    (9) var_decl_list_tail -> . var_decl var_decl_list_tail
    (10) var_decl_list_tail -> .
    (11) var_decl -> . id_list COLON tipo SEMICOLON
    (12) id_list -> . ID id_list_tail

    VAR             reduce using rule 10 (var_decl_list_tail -> .)
    FUNCTION        reduce using rule 10 (var_decl_list_tail -> .)
    PROCEDURE       reduce using rule 10 (var_decl_list_tail -> .)
    BEGIN           reduce using rule 10 (var_decl_list_tail -> .)
    ID              shift and go to state 24

    var_decl                       shift and go to state 47
    var_decl_list_tail             shift and go to state 87
    id_list                        shift and go to state 23

state 48

    (8) var_decl_list -> var_decl var_decl_list_tail .

    VAR             reduce using rule 8 (var_decl_list -> var_decl var_decl_list_tail .)
    FUNCTION        reduce using rule 8 (var_decl_list -> var_decl var_decl_list_tail .)
    PROCEDURE       reduce using rule 8 (var_decl_list -> var_decl var_decl_list_tail .)
    BEGIN           reduce using rule 8 (var_decl_list -> var_decl var_decl_list_tail .)


state 49

    (11) var_decl -> id_list COLON . tipo SEMICOLON
    (15) tipo -> . INTEGER
    (16) tipo -> . REAL
    (17) tipo -> . BOOLEAN
